[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/lvl_class.gd" type="Script" id=2]
[ext_resource path="res://scenes/world/tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interactables/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/world/background.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/interactables/goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/actors/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/interactables/key.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/world/music.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/interactables/checkpoint.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/actors/enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/audio/music/pressure-02.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/music/pressure-01.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/music/pressure-03.wav" type="AudioStream" id=14]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=15]
[ext_resource path="res://scripts/tutorial.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 160 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="LvlIntro" type="Node2D"]
script = ExtResource( 2 )
BULLET_LIGHTNESS = 0.4
FLOOR_DARKNESS = 0.08
SPEED_PER_CHECKPOINT = 1.5
color_1 = Color( 1, 1, 1, 1 )
color_2 = Color( 1, 0.431373, 0.431373, 1 )
checkpoint_blend = Color( 1, 0.658824, 0, 1 )

[node name="Background" parent="." instance=ExtResource( 5 )]
position = Vector2( 383.37, -320 )
region_rect = Rect2( 0, 0, 2048, 1280 )

[node name="Background2" parent="." instance=ExtResource( 5 )]
position = Vector2( 864, 640 )
region_rect = Rect2( 0, 0, 1088, 640 )

[node name="Floor" parent="." groups=[
"floor",
] instance=ExtResource( 3 )]
tile_data = PoolIntArray( -196608, 3, 8, -196607, 3, 10, -196606, 3, 10, -196605, 3, 10, -196604, 3, 10, -196603, 3, 10, -196602, 3, 10, -196601, 3, 10, -196600, 3, 10, -196599, 3, 11, -131072, 3, 65544, -131071, 3, 131081, -131070, 3, 131081, -131069, 3, 131081, -131068, 3, 131081, -131067, 3, 131081, -131066, 3, 131081, -131065, 3, 131081, -131064, 3, 131081, -131063, 3, 131083, -1, 3, 8, -65536, 3, 65541, -65535, 3, 131081, -65534, 3, 131081, -65533, 3, 131081, -65532, 3, 131081, -65531, 3, 131081, -65530, 3, 131081, -65529, 3, 131081, -65528, 3, 131081, -65527, 3, 65542, -65526, 3, 10, -65525, 3, 11, 65535, 3, 65544, 0, 3, 131081, 1, 3, 131081, 2, 3, 131081, 3, 3, 131081, 4, 3, 131081, 5, 3, 131081, 6, 3, 131081, 7, 3, 131081, 8, 3, 131081, 9, 3, 131081, 10, 3, 131081, 11, 3, 131083, 131071, 3, 196616, 65536, 3, 131077, 65537, 3, 131081, 65538, 3, 131081, 65539, 3, 131081, 65540, 3, 131081, 65541, 3, 131081, 65542, 3, 131081, 65543, 3, 131081, 65544, 3, 131081, 65545, 3, 131081, 65546, 3, 131081, 65547, 3, 65542, 65548, 3, 11, 131072, 3, 65544, 131073, 3, 131081, 131074, 3, 131081, 131075, 3, 131081, 131076, 3, 131081, 131077, 3, 131081, 131078, 3, 131081, 131079, 3, 131081, 131080, 3, 131081, 131081, 3, 131081, 131082, 3, 131081, 131083, 3, 131081, 131084, 3, 131083, 196608, 3, 196616, 196609, 3, 196617, 196610, 3, 196617, 196611, 3, 196617, 196612, 3, 196617, 196613, 3, 131077, 196614, 3, 131081, 196615, 3, 131081, 196616, 3, 131081, 196617, 3, 131081, 196618, 3, 131081, 196619, 3, 131081, 196620, 3, 131083, 262149, 3, 65544, 262150, 3, 131081, 262151, 3, 131081, 262152, 3, 131081, 262153, 3, 131081, 262154, 3, 131081, 262155, 3, 131078, 262156, 3, 196619, 327685, 3, 65544, 327686, 3, 131081, 327687, 3, 131081, 327688, 3, 131081, 327689, 3, 131081, 327690, 3, 131081, 327691, 3, 131083, 393221, 3, 196616, 393222, 3, 196617, 393223, 3, 196617, 393224, 3, 196617, 393225, 3, 196617, 393226, 3, 196617, 393227, 3, 196619 )

[node name="Walls" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -917514, 2, 0, -917513, 2, 0, -917512, 2, 0, -917511, 2, 0, -917510, 2, 0, -917509, 2, 0, -917508, 2, 0, -917507, 2, 0, -917506, 2, 0, -917505, 2, 0, -983040, 2, 0, -983039, 2, 0, -983038, 2, 0, -983037, 2, 0, -983036, 2, 0, -983035, 2, 0, -983034, 2, 0, -983033, 2, 0, -983032, 2, 0, -983031, 2, 0, -983030, 2, 0, -983029, 2, 0, -983028, 2, 0, -983027, 2, 0, -983026, 2, 0, -983025, 2, 0, -983024, 2, 0, -983023, 2, 0, -983022, 2, 0, -983021, 2, 0, -983020, 2, 0, -983019, 2, 0, -851978, 2, 0, -917483, 2, 0, -786442, 2, 0, -851947, 2, 0, -720906, 2, 0, -786411, 2, 0, -655370, 2, 0, -720875, 2, 0, -589834, 2, 0, -655339, 2, 0, -524298, 2, 0, -589803, 2, 0, -458762, 2, 0, -524267, 2, 0, -393226, 2, 0, -458731, 2, 0, -327690, 2, 0, -393195, 2, 0, -262154, 2, 0, -327659, 2, 0, -196618, 2, 0, -262123, 2, 0, -131082, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196599, 2, 0, -196587, 2, 0, -65546, 2, 0, -131072, 2, 0, -131066, 2, 0, -131065, 2, 0, -131063, 2, 0, -131051, 2, 0, -10, 2, 0, -1, 2, 0, -65536, 2, 0, -65530, 2, 0, -65529, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65515, 2, 0, 65526, 2, 0, 65535, 2, 0, 11, 2, 0, 21, 2, 0, 131062, 2, 0, 131071, 2, 0, 65536, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65547, 2, 0, 65548, 2, 0, 65557, 2, 0, 196598, 2, 0, 131072, 2, 0, 131078, 2, 0, 131079, 2, 0, 131084, 2, 0, 131093, 2, 0, 262134, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196629, 2, 0, 327670, 2, 0, 327671, 2, 0, 327672, 2, 0, 327673, 2, 0, 327674, 2, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262151, 9, 0, 262153, 2, 0, 262155, 2, 0, 262156, 2, 0, 262165, 2, 0, 327691, 2, 0, 327701, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393237, 2, 0, 458757, 2, 0, 458773, 2, 0, 524293, 2, 0, 524309, 2, 0, 589829, 2, 0, 589845, 2, 0, 655365, 2, 0, 655381, 2, 0, 720901, 2, 0, 720917, 2, 0, 786437, 2, 0, 786453, 2, 0, 851973, 2, 0, 851989, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0 )

[node name="Goal" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 352 )

[node name="Key" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.658824, 0.376471, 0.376471, 1 )
position = Vector2( 480, 288 )

[node name="Door" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.658824, 0.376471, 0.376471, 1 )

[node name="Enemy" parent="." instance=ExtResource( 11 )]
position = Vector2( 544, -160 )
rotation = 1.57079
fire_rate = 1.5

[node name="Enemy2" parent="." instance=ExtResource( 11 )]
position = Vector2( 544, 160 )

[node name="Enemy3" parent="." instance=ExtResource( 11 )]
position = Vector2( 800, 224 )
rotation = 3.14159
offset = 0.5

[node name="Enemy4" parent="." instance=ExtResource( 11 )]
position = Vector2( 544, 288 )
rotation = -3.14159
fire_rate = 1.25

[node name="Checkpoint" parent="." instance=ExtResource( 10 )]
position = Vector2( 416, 32 )

[node name="Checkpoint2" parent="." instance=ExtResource( 10 )]
position = Vector2( 672, 32 )

[node name="Checkpoint3" parent="." instance=ExtResource( 10 )]
position = Vector2( 672, 352 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 32, 32 )

[node name="Music" parent="." instance=ExtResource( 9 )]
loop_1 = ExtResource( 13 )
loop_2 = ExtResource( 12 )
loop_3 = ExtResource( 14 )

[node name="Tutorial" type="Node" parent="."]
script = ExtResource( 16 )

[node name="LblSwivel" type="RichTextLabel" parent="Tutorial"]
visible = false
margin_left = 74.0
margin_top = -121.0
margin_right = 252.0
margin_bottom = 190.0
custom_fonts/normal_font = ExtResource( 15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "PRESS [img=24]res://assets/textures/Arrow_Down_Key_Light.png[/img][img=24]res://assets/textures/Arrow_Up_Key_Light.png[/img] TO
ROTATE SWIVEL
CLOCKWISE OR
ANTI-CLOCKWISE


PRESS [img=24]res://assets/textures/Shift_Key_Light.png[/img] OR [img=24]res://assets/textures/XboxOne_A.png[/img]
OR [img=24]res://assets/textures/XboxOne_B.png[/img] TO MOVE
SWIVEL 180
DEGREES"
text = "PRESS  TO
ROTATE SWIVEL
CLOCKWISE OR
ANTI-CLOCKWISE


PRESS  OR 
OR  TO MOVE
SWIVEL 180
DEGREES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblMove" type="RichTextLabel" parent="Tutorial"]
visible = false
margin_left = 213.0
margin_top = -74.0
margin_right = 358.0
margin_bottom = 149.0
custom_fonts/normal_font = ExtResource( 15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "PRESS [img=24]res://assets/textures/Arrow_Right_Key_Light.png[/img][img=24]res://assets/textures/Arrow_Left_Key_Light.png[/img]
TO MOVE YOURSELF
CLOCKWISE OR
ANTICLOCKWISE,
AROUND YOUR SWIVEL"
text = "PRESS 
TO MOVE YOURSELF
CLOCKWISE OR
ANTICLOCKWISE,
AROUND YOUR SWIVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblCheckpoint" type="RichTextLabel" parent="Tutorial"]
visible = false
margin_left = 448.0
margin_right = 640.0
margin_bottom = 223.0
custom_fonts/normal_font = ExtResource( 15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "		GET TO 
		THIS CHECKPOINT"
text = "		GET TO 
		THIS CHECKPOINT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Tutorial/LblCheckpoint"]
position = Vector2( 50.227, -16.9514 )
points = PoolVector2Array( 0.152832, 49.0174, -14.085, 42.1255, -30.5067, 38.9471, -45.2043, 37.6781, -40.5717, 45.3039, -37.923, 29.9417, -44.7668, 37.6264 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )

[node name="TutorialArea" type="Area2D" parent="Tutorial"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/TutorialArea"]
position = Vector2( 224, 32 )
shape = SubResource( 1 )

[node name="FirstCheckpoint" type="Area2D" parent="Tutorial"]
position = Vector2( 192, 0 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/FirstCheckpoint"]
position = Vector2( 224, 32 )
shape = SubResource( 2 )

[node name="LblGoodbye" type="Label" parent="Tutorial"]
visible = false
margin_left = 89.3619
margin_top = -16.6855
margin_right = 367.362
margin_bottom = 79.3145
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GOOD LUCK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="close_door" from="Key" to="Door" method="_on_Key_close_door"]
[connection signal="open_door" from="Key" to="Door" method="_on_Key_open_door"]
[connection signal="checkpoint_reached" from="Player" to="." method="_on_Player_checkpoint_reached"]
[connection signal="goal_reached" from="Player" to="." method="_on_Player_goal_reached"]
[connection signal="intro_finished" from="Player" to="Tutorial" method="_on_Player_intro_finished"]
[connection signal="respawning" from="Player" to="Key" method="_on_Player_respawning"]
[connection signal="area_entered" from="Tutorial/TutorialArea" to="Tutorial" method="_on_TutorialArea_area_entered"]
[connection signal="area_entered" from="Tutorial/FirstCheckpoint" to="Tutorial" method="_on_FirstCheckpoint_area_entered"]
